# Auto_Prom_vid

./: README.md  pyproject.toml  requirements.txt
autoprom/: main.py  scraper.py  script_generator.py  tts.py  video_assembler.py
src/: pipeline.py
src/scraper/: product_scraper.py
src/scriptgen/: script_generator.py
src/tts/: tts_engine.py
src/video/: video_assembler.py
tests/: conftest.py  test_basic.py
